created Homepage hero

--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <h1>Hello!</h1>
+    <div class="hero">
+      <p>👋🏼 I am</p>
+      <h1>Laura Batlle</h1>
+      <h2>Front-end developer based in Europe</h2>
 
-    <h2>This is amazing!</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
   </body>
 </html>
