improved body of the index html

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <p class="text-center m-5">My projects developed until now:</p>
 
     <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <img src="images/Natual wine page.png" class="img-fluid" alt="" />
+      <div class="row m-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/Natual-wine.png" class="img-fluid" alt="" />
         </div>
-        <div class="col-6">
-          <div class="project-desciption">
+        <div class="col">
+          <div class="project-description">
             <h2 class="mb-5">Natural wine page</h2>
             <p class="mb-5 text-muted">
               First project developed using only HTML and CSS. Very simple in
@@ -62,51 +62,49 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row m-5">
         <div class="col">
-          <div class="project-desciption">
-            <h2 class="mb-5">Knitting Project</h2>
+          <div class="project-description">
+            <h2 class="mb-5">Knitting project</h2>
             <p class="mb-5 text-muted">
-              Second project that included Javascript. It has a dark mode option
-              which changes the appearance of the whole page.
+              First project developed using only HTML and CSS. Very simple in
+              order to learn the basic techniques.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
-        <div class="col">
-          <img src="images/Knitting project.png" class="img-fluid" alt="" />
+        <div class="col d-none d-lg-block">
+          <img src="images/Knitting-project.png" class="img-fluid" alt="" />
         </div>
       </div>
-      <div class="row">
-        <div class="col">
-          <img src="images/Weather App.png" class="img-fluid" alt="" />
+      <div class="row m-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/Weather-App.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
-          <div class="project-desciption">
+          <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              First project developed using only HTML and CSS. Very simple in
+              order to learn the basic techniques.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row m-5">
         <div class="col">
-          <div class="project-desciption">
+          <div class="project-description">
             <h2 class="mb-5">World clock App</h2>
             <p class="mb-5 text-muted">
-              Second project that included Javascript. It has a dark mode option
-              which changes the appearance of the whole page.
+              First project developed using only HTML and CSS. Very simple in
+              order to learn the basic techniques.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
-        <div class="col">
-          <img src="images/World clock.png" class="img-fluid" alt="" />
+        <div class="col d-none d-lg-block">
+          <img src="images/World-clock.png" class="img-fluid" alt="" />
         </div>
       </div>
     </div>
