updated the content

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             <h2 class="mb-5">Natural wine page</h2>
             <p class="mb-5 text-muted">
               First project developed using only HTML and CSS. Very simple in
-              order to learn the basic techniques.
+              order to learn the basic techniques. It is about natural wines,
+              which is a topic I'm very into right now.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
@@ -67,8 +68,10 @@
           <div class="project-description">
             <h2 class="mb-5">Knitting project</h2>
             <p class="mb-5 text-muted">
-              First project developed using only HTML and CSS. Very simple in
-              order to learn the basic techniques.
+              Second project with the introduction of Javascript language. The
+              page has a change to dark mode option and it has a more complex
+              structure than the first project. It is about Knitting, one of my
+              hobbies.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
@@ -85,8 +88,11 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              First project developed using only HTML and CSS. Very simple in
-              order to learn the basic techniques.
+              This was by far, the most complex project I did until now. It is a
+              weather App that allows the user to search the weather of any city
+              in the world and also the current location of the user. It has all
+              three languages learnt until now but it is not responsive. It has
+              an integration of an API.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
@@ -97,8 +103,8 @@
           <div class="project-description">
             <h2 class="mb-5">World clock App</h2>
             <p class="mb-5 text-muted">
-              First project developed using only HTML and CSS. Very simple in
-              order to learn the basic techniques.
+              This project is an extension of the previous one, it is a world
+              clock that uses an API also and current location too.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
