--- a/about.html
+++ b/about.html
@@ -35,10 +35,10 @@
     <title>About me</title>
   </head>
   <body>
-    <div class="about-section container mt-10">
+    <div class="content-container container mt-10">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-section-content">
+          <div class="content">
             <h1 class="mb-4">Hola! I am Laura</h1>
             <h2 class="mb-4">Frontend Developer based in Barcelona ☀️</h2>
             <p class="mb-5">
