--- a/work.html
+++ b/work.html
@@ -37,20 +37,9 @@
   <body>
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-5 text-center">
-          Take a look at what I've been working on!
-        </h1>
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
 
         <div class="row">
-          <div class="col-md-6 mb-4">
-            <img
-              src="images/Natual-wine.png"
-              class="img-fluid mb-3 rounded"
-              alt=""
-            />
-            <h3 class="text-center m-0">Natural wine page</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
-          </div>
           <div class="col-md-6 mb-4">
             <img
               src="images/Knitting-project.png"
@@ -60,17 +49,6 @@
             <h3 class="text-center m-0">Knitting-project</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS and Javascript
-            </p>
-          </div>
-          <div class="col-md-6 mb-4">
-            <img
-              src="images/Weather-App.png"
-              class="img-fluid mb-3 rounded"
-              alt=""
-            />
-            <h3 class="text-center m-0">Weather App</h3>
-            <p class="text-center text-muted">
-              Built with HTML, CSS, advanced Javascript and an API
             </p>
           </div>
 
@@ -84,6 +62,26 @@
             <p class="text-center text-muted">
               Built with HTML, CSS, advanced Javascript and an API
             </p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/Weather-App.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Weather App</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS, advanced Javascript and an API
+            </p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/Natual-wine.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Natural wine page</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
         </div>
       </div>
