--- a/about.html
+++ b/about.html
@@ -35,6 +35,38 @@
     <title>About me</title>
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: white"
+    >
+      <a class="navbar-brand" href="/">
+        <img
+          src="images/logo.png"
+          height="30"
+          class="d-inline-block align-top"
+          alt=""
+        />
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/index.html">Home</a>
+          <a class="nav-item nav-link active" href="/about.html">About</a>
+          <a class="nav-item nav-link" href="/work.html">Projects</a>
+          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+        </div>
+      </div>
+    </nav>
     <div class="content-container container mt-10">
       <div class="row">
         <div class="col-lg-6">
@@ -47,7 +79,7 @@
               skills. This is my portfolio where you can see all my projects.
               Feel free to contact me if you would like to know more 😊
             </p>
-            <a href="" class="btn btn-branding">See my projects</a>
+            <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
