--- a/index.html
+++ b/index.html
@@ -35,13 +35,46 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: white"
+    >
+      <a class="navbar-brand" href="#">
+        <img
+          src="images/logo.png"
+          height="30"
+          class="d-inline-block align-top"
+          alt=""
+        />
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="/index.html">Home</a>
+          <a class="nav-item nav-link" href="/about.html">About</a>
+          <a class="nav-item nav-link" href="/work.html">Projects</a>
+          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+        </div>
+      </div>
+    </nav>
+
     <div class="hero">
       <p>👋🏼 I am</p>
       <h1>Laura Batlle</h1>
       <h2>Front-end developer based in Europe</h2>
 
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">My projects developed until now:</p>
@@ -59,7 +92,9 @@
               order to learn the basic techniques. It is about natural wines,
               which is a topic I'm very into right now.
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
       </div>
@@ -73,7 +108,9 @@
               structure than the first project. It is about Knitting, one of my
               hobbies.
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -94,7 +131,9 @@
               three languages learnt until now but it is not responsive. It has
               an integration of an API.
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
       </div>
@@ -106,7 +145,9 @@
               This project is an extension of the previous one, it is a world
               clock that uses an API also and current location too.
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
