--- a/work.html
+++ b/work.html
@@ -35,6 +35,38 @@
     <title>My Projects</title>
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: white"
+    >
+      <a class="navbar-brand" href="/">
+        <img
+          src="images/logo.png"
+          height="30"
+          class="d-inline-block align-top"
+          alt=""
+        />
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="/index.html">Home</a>
+          <a class="nav-item nav-link" href="/about.html">About</a>
+          <a class="nav-item nav-link active" href="/work.html">Projects</a>
+          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+        </div>
+      </div>
+    </nav>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
