--- a/contact.html
+++ b/contact.html
@@ -96,24 +96,43 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3"> Contact me </a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="contact-me"
+            >
+              Contact me
+            </a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:laura.batlle007@gmail.com" class="email-link">
+          <a
+            href="mailto:laura.batlle007@gmail.com"
+            class="email-link"
+            title="send me an email"
+          >
             laura.batlle007@gmail.com
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.github.com/laurabatlle/" target="_blank">
+          <a
+            href="https://www.github.com/laurabatlle/"
+            target="_blank"
+            title="go to my gibhub profile"
+          >
             <i class="fab fa-github" aria-hidden="true"></i>
           </a>
-          <a href="https://www.instragram.com/laurabatlle/" target="_blank">
+          <a
+            href="https://www.instragram.com/laurabatlle/"
+            target="_blank"
+            title="go to my instagram profile"
+          >
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
           <a
             href="https://www.linkedin.com/in/laura-batlle-marsal/"
             target="_blank"
+            title="Go to my Linkedin profile"
           >
             <i class="fab fa-linkedin" aria-hidden="true"></i>
           </a>
