--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Portfolio</title>
+    <title>Laura Batlle - Front-end developer</title>
   </head>
   <body>
     <nav
@@ -44,7 +44,7 @@
           src="images/logo.png"
           height="30"
           class="d-inline-block align-top"
-          alt=""
+          alt="logo"
         />
       </a>
       <button
@@ -60,10 +60,21 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="/index.html">Home</a>
-          <a class="nav-item nav-link" href="/about.html">About</a>
-          <a class="nav-item nav-link" href="/work.html">Projects</a>
-          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+          <a
+            class="nav-item nav-link active"
+            href="/index.html"
+            title="Homepage"
+            >Home</a
+          >
+          <a class="nav-item nav-link" href="/about.html" title="About me"
+            >About</a
+          >
+          <a class="nav-item nav-link" href="/work.html" title="My Projects"
+            >Projects</a
+          >
+          <a class="nav-item nav-link" href="/contact.html" title="Contact me"
+            >Contact</a
+          >
         </div>
       </div>
     </nav>
@@ -74,7 +85,9 @@
       <h2>Front-end developer based in Europe</h2>
 
       <div>
-        <a href="/contact.html" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Contact me page"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">My projects developed until now:</p>
@@ -82,7 +95,11 @@
     <div class="container">
       <div class="row m-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Natual-wine.png" class="img-fluid" alt="" />
+          <img
+            src="images/Natual-wine.png"
+            class="img-fluid"
+            alt="natural wine project"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -114,12 +131,20 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/Knitting-project.png" class="img-fluid" alt="" />
+          <img
+            src="images/Knitting-project.png"
+            class="img-fluid"
+            alt=" knitting project"
+          />
         </div>
       </div>
       <div class="row m-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Weather-App.png" class="img-fluid" alt="" />
+          <img
+            src="images/Weather-App.png"
+            class="img-fluid"
+            alt="weather app"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -145,13 +170,21 @@
               This project is an extension of the previous one, it is a world
               clock that uses an API also and current location too.
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">
+            <a
+              href="/work.html"
+              class="btn btn-branding-outline"
+              title="go to work"
+            >
               Learn more
             </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/World-clock.png" class="img-fluid" alt="" />
+          <img
+            src="images/World-clock.png"
+            class="img-fluid"
+            alt="world clock image"
+          />
         </div>
       </div>
       <footer>
@@ -161,24 +194,43 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3"> Contact me </a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="contact-me"
+            >
+              Contact me
+            </a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:laura.batlle007@gmail.com" class="email-link">
+          <a
+            href="mailto:laura.batlle007@gmail.com"
+            class="email-link"
+            title="send me an email"
+          >
             laura.batlle007@gmail.com
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.github.com/laurabatlle/" target="_blank">
+          <a
+            href="https://www.github.com/laurabatlle/"
+            target="_blank"
+            title="go to my gibhub profile"
+          >
             <i class="fab fa-github" aria-hidden="true"></i>
           </a>
-          <a href="https://www.instragram.com/laurabatlle/" target="_blank">
+          <a
+            href="https://www.instragram.com/laurabatlle/"
+            target="_blank"
+            title="go to my instagram profile"
+          >
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
           <a
             href="https://www.linkedin.com/in/laura-batlle-marsal/"
             target="_blank"
+            title="Go to my Linkedin profile"
           >
             <i class="fab fa-linkedin" aria-hidden="true"></i>
           </a>
