--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@
           src="images/logo.png"
           height="30"
           class="d-inline-block align-top"
-          alt=""
+          alt="logo"
         />
       </a>
       <button
@@ -60,10 +60,21 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/index.html">Home</a>
-          <a class="nav-item nav-link" href="/about.html">About</a>
-          <a class="nav-item nav-link active" href="/work.html">Projects</a>
-          <a class="nav-item nav-link" href="/contact.html">Contact</a>
+          <a class="nav-item nav-link" href="/index.html" title="Homepage"
+            >Home</a
+          >
+          <a class="nav-item nav-link" href="/about.html" title="About me"
+            >About</a
+          >
+          <a
+            class="nav-item nav-link active"
+            href="/work.html"
+            title="My Projects"
+            >Projects</a
+          >
+          <a class="nav-item nav-link" href="/contact.html" title="Contact me"
+            >Contact</a
+          >
         </div>
       </div>
     </nav>
@@ -88,7 +99,7 @@
             <img
               src="images/World-clock.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="world clock app"
             />
             <h3 class="text-center m-0">World Clock App</h3>
             <p class="text-center text-muted">
@@ -99,7 +110,7 @@
             <img
               src="images/Weather-App.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="weather app"
             />
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">
@@ -110,7 +121,7 @@
             <img
               src="images/Natual-wine.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="natural wine page"
             />
             <h3 class="text-center m-0">Natural wine page</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
@@ -124,24 +135,43 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3"> Contact me </a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="contact-me"
+            >
+              Contact me
+            </a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:laura.batlle007@gmail.com" class="email-link">
+          <a
+            href="mailto:laura.batlle007@gmail.com"
+            class="email-link"
+            title="send me an email"
+          >
             laura.batlle007@gmail.com
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.github.com/laurabatlle/" target="_blank">
+          <a
+            href="https://www.github.com/laurabatlle/"
+            target="_blank"
+            title="go to my gibhub profile"
+          >
             <i class="fab fa-github" aria-hidden="true"></i>
           </a>
-          <a href="https://www.instragram.com/laurabatlle/" target="_blank">
+          <a
+            href="https://www.instragram.com/laurabatlle/"
+            target="_blank"
+            title="go to my instagram profile"
+          >
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
           <a
             href="https://www.linkedin.com/in/laura-batlle-marsal/"
             target="_blank"
+            title="Go to my Linkedin profile"
           >
             <i class="fab fa-linkedin" aria-hidden="true"></i>
           </a>
