added github code

--- a/work.html
+++ b/work.html
@@ -176,6 +176,12 @@
             <i class="fab fa-linkedin" aria-hidden="true"></i>
           </a>
         </div>
+        <h5>
+          Open source code available in my
+          <a href="https://github.com/laurabatlle/Laura-Portfolio-Project"
+            >Github profile</a
+          >
+        </h5>
       </footer>
     </div>
   </body>
