--- a/work.html
+++ b/work.html
@@ -34,12 +34,11 @@
 
     <title>My Projects</title>
   </head>
-  <body>
-    <nav
+  <<nav
       class="navbar navbar-expand-lg navbar-light"
       style="background-color: white"
     >
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="#">
         <img
           src="images/logo.png"
           height="30"
@@ -51,31 +50,40 @@
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
+        data-target="#navbarTogglerDemo01"
+        aria-controls="navbarTogglerDemo01"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/index.html" title="Homepage"
-            >Home</a
-          >
-          <a class="nav-item nav-link" href="/about.html" title="About me"
-            >About</a
-          >
-          <a
-            class="nav-item nav-link active"
-            href="/work.html"
-            title="My Projects"
-            >Projects</a
-          >
-          <a class="nav-item nav-link" href="/contact.html" title="Contact me"
-            >Contact</a
-          >
-        </div>
+
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item active">
+            <a
+              class="nav-item nav-link active"
+              href="/index.html"
+              title="Homepage"
+              >Home</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="/about.html" title="About me"
+              >About</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="/work.html" title="My Projects"
+              >Projects</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="/contact.html" title="Contact me"
+              >Contact</a
+            >
+          </li>
+        </ul>
       </div>
     </nav>
     <div class="content-container container">
