--- a/about.html
+++ b/about.html
@@ -4,16 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,7 +22,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
 
-    <title>About me</title>
+    <title>About me - Laura Batlle</title>
   </head>
   <body>
     <nav
@@ -50,8 +40,8 @@
       <button
         class="navbar-toggler"
         type="button"
-        data-toggle="collapse"
-        data-target="#navbarTogglerDemo01"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarTogglerDemo01"
         aria-controls="navbarTogglerDemo01"
         aria-expanded="false"
         aria-label="Toggle navigation"
@@ -59,18 +49,18 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a
-              class="nav-item nav-link active"
-              href="/index.html"
-              title="Homepage"
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="/index.html" title="Homepage"
               >Home</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-item nav-link" href="/about.html" title="About me"
+            <a
+              class="nav-item nav-link active"
+              href="/about.html"
+              title="About me"
               >About</a
             >
           </li>
@@ -87,6 +77,7 @@
         </ul>
       </div>
     </nav>
+
     <div class="content-container container mt-10">
       <div class="row">
         <div class="col-lg-6">
