--- a/work.html
+++ b/work.html
@@ -4,16 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -32,9 +22,10 @@
     />
     <link rel="stylesheet" href="styles.css" />
 
-    <title>My Projects</title>
+    <title>My projects - Laura Batlle</title>
   </head>
-  <<nav
+  <body>
+    <nav
       class="navbar navbar-expand-lg navbar-light"
       style="background-color: white"
     >
@@ -49,8 +40,8 @@
       <button
         class="navbar-toggler"
         type="button"
-        data-toggle="collapse"
-        data-target="#navbarTogglerDemo01"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarTogglerDemo01"
         aria-controls="navbarTogglerDemo01"
         aria-expanded="false"
         aria-label="Toggle navigation"
@@ -58,13 +49,10 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item active">
-            <a
-              class="nav-item nav-link active"
-              href="/index.html"
-              title="Homepage"
+            <a class="nav-item nav-link" href="/index.html" title="Homepage"
               >Home</a
             >
           </li>
@@ -74,7 +62,10 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-item nav-link" href="/work.html" title="My Projects"
+            <a
+              class="nav-item nav-link active"
+              href="/work.html"
+              title="My Projects"
               >Projects</a
             >
           </li>
@@ -86,6 +77,7 @@
         </ul>
       </div>
     </nav>
+
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
