did some changes to add projects

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -149,11 +149,10 @@
           <div class="project-description">
             <h2 class="mb-3">Weather App</h2>
             <p class="mb-3 text-muted">
-              This was by far, the most complex project I did until now. It is a
-              weather App that allows the user to search the weather of any city
-              in the world and also the current location of the user. It has all
-              three languages learnt until now but it is not responsive. It has
-              an integration of an API.
+              This project is a weather App that allows the user to search the
+              weather of any city in the world and also the current location of
+              the user. It has all three languages learnt until now but it is
+              not responsive. It has an integration of an API.
             </p>
             <a href="/work.html" class="btn btn-branding-outline">
               Learn more
