--- a/work.html
+++ b/work.html
@@ -114,7 +114,7 @@
             />
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">
-              Built with HTML, CSS, advanced Javascript and an API
+              Built with HTML, CSS, advanced Javascript, Bootstrap and an API
             </p>
           </div>
           <div class="col-md-6 mb-4">
@@ -125,6 +125,18 @@
             />
             <h3 class="text-center m-0">Natural wine page</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/Adds-on.png"
+              class="img-fluid mb-3 rounded"
+              alt="barcelona page"
+            />
+            <h3 class="text-center m-0">Barcelona responsive page</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS, advanced Javascript and Bootstrap. Is a
+              responsive website with my favourite places in Barcelona.
+            </p>
           </div>
         </div>
       </div>
